Localized static resources and reconfigured
for subdirectories of /quips.

--- a/development.ini
+++ b/development.ini
@@ -29,6 +29,13 @@ sqlalchemy.url = sqlite:///quips.db
 use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
+# Used for proxy servers to allow X-Forwarded-Proto to override default URL scheme
+# example is to use nginx with SSL and use:
+# proxy_set_header        X-Forwarded-Proto $scheme;
+# in the nginx configuration.
+# Static references can then respect the protocol used by the proxy (useful in HSTS).
+# See also quippy_wat/__init.py__ for config.add_static_view configuration 
+trusted_proxy = 127.0.0.1
 
 ###
 # logging configuration
