--- a/development.ini
+++ b/development.ini
@@ -15,6 +15,9 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
+# TODO: change this to salt your password hashing!
+quips.secret = WbNjnUPI44e@OF$gfZSz
+
 sqlalchemy.url = sqlite:///quips.db
 
 # By default, the toolbar only appears for clients from IP addresses
