--- a/production.ini
+++ b/production.ini
@@ -12,6 +12,9 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
+# TODO: Change this!!
+quips.secret = WbNjnUPI44e@OF$gfZSz
+
 ###
 # wsgi server configuration
 ###
