--- a/development.ini
+++ b/development.ini
@@ -12,6 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
+	pyramid_mailer
     pyramid_debugtoolbar
     pyramid_tm
 
@@ -19,6 +20,8 @@ pyramid.includes =
 quips.secret = WbNjnUPI44e@OF$gfZSz
 
 sqlalchemy.url = sqlite:///quips.db
+mail.host = localhost
+mail.port = 2525
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
