--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bcrypt==3.1.1
 beautifulsoup4==4.5.1
+cffi==1.9.1
 Chameleon==2.25
 coverage==4.2
 FormEncode==1.3.1
@@ -7,19 +8,22 @@ Mako==1.0.6
 MarkupSafe==0.23
 PasteDeploy==1.5.2
 py==1.4.31
+pycparser==2.17
 Pygments==2.1.3
 pyramid==1.7.3
 pyramid-chameleon==0.3
 pyramid-debugtoolbar==3.0.5
+pyramid-mailer==0.14.1
 pyramid-mako==1.0.2
 pyramid-simpleform==0.6.1
 pyramid-tm==1.0.1
 pytest==3.0.4
 pytest-cov==2.4.0
 repoze.lru==0.6
+repoze.sendmail==4.1
 six==1.10.0
 SQLAlchemy==1.1.3
-transaction==2.0.1
+transaction==2.0.2
 translationstring==1.3
 venusian==1.0
 waitress==1.0.1
